1.1.7
====================================================================================================
* Participant status report restriction by participant synch date
  - This report now has a start/end date parameters which restricts the list based on when the
    participant was created in Sabretooth

* Adding quotas (full list/view/add/delete functionality)

* Various bug fixes

====================================================================================================
1.1.6
====================================================================================================
* Listen in to phone calls
  - Supervisors can now listen-in to their operator's live phone calls
  - The assignment list (as well as the "open assignment list") has a magnifying glass to connect to
    a call
  - Viewing an assignment also has a "listen in" button (when the assignment has a call which is
    active)

* Calendar date persistence
  - Calendars don't reset to today's date after changing event

* Various bug fixes

====================================================================================================
1.1.5
====================================================================================================

* View details added to appointment view
  - When viewing appointments a new "view details" button has been added which shows the
    participant's details
  - The participant's UID has been added to the appointment view

* Mailout report (Val's first contribution to Sabretooth!)
  - this report allows administrators to prepare mail-merges to mail information and/or proxy
    packages to participants
  - report can be broken down by site and source

* Sorting queues by age on weekdays
  - All queues are now sorted by age (oldest to youngest) on weekdays
  - A new setting "queue","reverse sort time" defines the time where the sorting is reversed from
    youngest to oldest