@@ -28,6 +28,20 @@ class quota_new extends \cenozo\ui\push\base_new
   }
 
   /**
+   * Processes arguments, preparing them for the operation.
+   * 
+   * @author Patrick Emond <emondpd@mcmaster.ca>
+   * @access protected
+   */
+  protected function prepare()
+  {
+    parent::prepare();
+
+    $this->set_machine_request_enabled( true );
+    $this->set_machine_request_url( MASTODON_URL );
+  }
+
+  /**
    * Validate the operation.
    * 
    * @author Patrick Emond <emondpd@mcmaster.ca>
@@ -43,6 +57,25 @@ class quota_new extends \cenozo\ui\push\base_new
     if( !array_key_exists( 'population', $columns ) || 0 == strlen( $columns['population'] ) )
       throw lib::create( 'exception\notice',
         'The quota\'s population cannot be left blank.', __METHOD__ );
+  }
+
+  /**
+   * Converts primary keys to unique keys in operation arguments.
+   * All converted arguments will appear in the array under a 'noid' key.
+   * @author Patrick Emond <emondpd@mcmaster.ca>
+   * @param array $args An argument list, usually those passed to the push operation.
+   * @return array
+   * @access protected
+   */
+  protected function convert_to_noid( $args )
+  {
+    $args = parent::convert_to_noid( $args );
+
+    // add in the site's cohort
+    $args['columns']['cohort'] =
+      lib::create( 'business\setting_manager' )->get_setting( 'general', 'cohort' );
+
+    return $args;
   }
 }
 ?>
